@@ -1,3 +1,8 @@
+2020-03-27  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* Makefile.in (version-generated.cc): Add remote-repository file
+	as a dependency.
+
 2020-03-12  Tom Tromey  <tom@tromey.com>
 
 	* configure: Rebuild.
